--- a/login.html
+++ b/login.html
@@ -57,6 +57,9 @@
         }
     </style>
 </head>
+<a href="javascript:history.back()" class="btn btn-primary">
+    الرجوع
+</a>
 <body>
     <script>
         function login() {
