--- a/tasees_qa.html
+++ b/tasees_qa.html
@@ -60,12 +60,10 @@
         }
     </style>
 </head>
+<a href="javascript:history.back()" class="btn btn-primary">
+    الرجوع
+</a>
 <body>
-    <!-- شريط التنبيه العلوي -->
-    <div class="alert" role="alert">
-        سجل دخولك لتظهر لك صفحات تأسيس قدرات وتحصيلي.
-    </div>
-
     <div class="container">
         <!-- العنوان -->
         <h2>تأسيس القدرات</h2>
