--- a/exam.html
+++ b/exam.html
@@ -50,6 +50,9 @@
         }
     </style>
 </head>
+<a href="javascript:history.back()" class="btn btn-primary">
+    الرجوع
+</a>
 <body>
     <div class="container">
         <h2> اختبار قدرات تجريبي</h2>
